examples/failing/MultipleErrors2.purs
module MultipleErrors2 where

foo = itDoesntExist

bar = neitherDoesThis
